@@ -1,8 +1,9 @@
-FROM tomcat:9-jre8
+FROM tomcat:9-jre11 as builder
 MAINTAINER Camptocamp "info@camptocamp.com"
 
-ENV GEOSERVER_VERSION 2.17
-ENV GEOSERVER_MINOR_VERSION 0
+# Latest stable as of december 2021
+ENV GEOSERVER_VERSION 2.20
+ENV GEOSERVER_MINOR_VERSION 1
 
 RUN mkdir /tmp/geoserver /mnt/geoserver_datadir /mnt/geoserver_geodata /mnt/geoserver_tiles
 
@@ -10,10 +11,16 @@ RUN mkdir /tmp/geoserver /mnt/geoserver_datadir /mnt/geoserver_geodata /mnt/geos
 RUN curl -L https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}/geoserver-${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}-war.zip/download > /tmp/geoserver.zip && \
     unzip -o /tmp/geoserver.zip -d /tmp/geoserver && \
     unzip -o /tmp/geoserver/geoserver.war -d $CATALINA_HOME/webapps/ROOT && \
-    rm -rf $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/marlin-*.jar && \
     rm -r /tmp/*
 
 VOLUME [ "/mnt/geoserver_datadir", "/mnt/geoserver_geodata", "/mnt/geoserver_tiles", "/tmp" ]
+
+# The officials APT turbojpeg packages libjpeg62-turbo libturbojpeg0 are not supported by geoserver (?)
+RUN wget https://sourceforge.net/projects/libjpeg-turbo/files/2.1.2/libjpeg-turbo-official_2.1.2_amd64.deb && \
+    dpkg -i libjpeg-turbo-official_2.1.2_amd64.deb && \
+    rm libjpeg-turbo-official_2.1.2_amd64.deb
+# JVM var java.library.path will be based on this env var. so GS will search native libs there.
+ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/opt/libjpeg-turbo/lib64/"
 
 # Install plugins if necessary
 # from sourceforge
@@ -21,8 +28,11 @@ RUN curl -L https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERV
     unzip -o /tmp/control-flow-plugin.zip -d $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/ && \
     curl -L https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}-css-plugin.zip/download > /tmp/css-plugin.zip && \
     unzip -o /tmp/css-plugin.zip -d $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/ && \
-curl -L https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}-vectortiles-plugin.zip/download > /tmp/vectortiles-plugin.zip && \
-    unzip -o /tmp/vectortiles-plugin.zip -d $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/
+    curl -L https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}-vectortiles-plugin.zip/download > /tmp/vectortiles-plugin.zip && \
+    unzip -o /tmp/vectortiles-plugin.zip -d $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/ && \
+    curl -L https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}/extensions/geoserver-${GEOSERVER_VERSION}.${GEOSERVER_MINOR_VERSION}-libjpeg-turbo-plugin.zip/download > /tmp/libjpeg-turbo-plugin.zip && \
+    unzip -o /tmp/libjpeg-turbo-plugin.zip -d $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/
+
 # from geoserver repo
 #RUN curl -L https://build.geoserver.org/geoserver/${GEOSERVER_VERSION}.x/community-latest/geoserver-${GEOSERVER_VERSION}-SNAPSHOT-mbstyle-plugin.zip > /tmp/mbstyle-plugin.zip && \
 #    unzip -o /tmp/mbstyle-plugin.zip -d $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/ && \
@@ -30,23 +40,25 @@ curl -L https://sourceforge.net/projects/geoserver/files/GeoServer/${GEOSERVER_V
 #    unzip -o /tmp/mbtiles-plugin.zip -d $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/ && \
 #    rm /tmp/*
 
-# Install Marlin
-RUN cd /usr/local/tomcat/lib && \
-    wget https://github.com/bourgesl/marlin-renderer/releases/download/v0.9.0/marlin-0.9.0-Unsafe.jar -O $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/marlin.jar && \
-    wget https://github.com/bourgesl/marlin-renderer/releases/download/v0.9.0/marlin-0.9.0-Unsafe-sun-java2d.jar -O $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/marlin-sun-java2d.jar
+# Install native JAI  https://geoserver.geo-solutions.it/multidim/install_run/jai_io_install.html
+RUN wget http://download.java.net/media/jai/builds/release/1_1_3/jai-1_1_3-lib-linux-amd64.tar.gz && \
+    tar xzf jai-1_1_3-lib-linux-amd64.tar.gz -C /tmp && \
+    mv -v /tmp/jai-1_1_3/lib/*.jar $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/ && \
+    mv -v /tmp/jai-1_1_3/lib/*.so $CATALINA_HOME/native-jni-lib/ && \
+    rm -r /tmp/jai-1_1_3 jai-1_1_3-lib-linux-amd64.tar.gz
+RUN wget http://download.java.net/media/jai-imageio/builds/release/1.1/jai_imageio-1_1-lib-linux-amd64.tar.gz && \
+    tar xzf jai_imageio-1_1-lib-linux-amd64.tar.gz -C /tmp && \
+    mv -v /tmp/jai_imageio-1_1/lib/*.jar $CATALINA_HOME/webapps/ROOT/WEB-INF/lib/ && \
+    mv -v /tmp/jai_imageio-1_1/lib/*.so $CATALINA_HOME/native-jni-lib/ && \
+    rm -r /tmp/jai_imageio-1_1 jai_imageio-1_1-lib-linux-amd64.tar.gz
 
-ENV CATALINA_OPTS "-Xms1024M \
- -Xbootclasspath/a:$CATALINA_HOME/webapps/ROOT/WEB-INF/lib/marlin.jar \
- -Xbootclasspath/p:$CATALINA_HOME/webapps/ROOT/WEB-INF/lib/marlin-sun-java2d.jar \
- -Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine \
+# since we are on JDK11 and inside a container, see also option -XX:MaxRAMPercentage instead of Xms/Xmx
+ENV CATALINA_OPTS "-Xms1024M -Xmx2048m \
  -DGEOSERVER_DATA_DIR=/mnt/geoserver_datadir \
  -DGEOWEBCACHE_CACHE_DIR=/mnt/geoserver_tiles \
  -DENABLE_JSONP=true \
  -Dorg.geotools.coverage.jaiext.enabled=true \
- -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2 \
- -XX:SoftRefLRUPolicyMSPerMB=36000 \
- -XX:+UnlockExperimentalVMOptions \
- -XX:+UseCGroupMemoryLimitForHeap"
+ -XX:SoftRefLRUPolicyMSPerMB=36000 "
 
 # Use min data dir template
-COPY min_data_dir/* /mnt/geoserver_datadir/
+COPY min_data_dir/ /mnt/geoserver_datadir/
